Improve person ui fix

--- a/src/app/people/create/create.component.html
+++ b/src/app/people/create/create.component.html
@@ -1,5 +1,9 @@
 <section fxLayout="row wrap" fxLayoutAlign="center center" class="hide-scroll">
   <mat-card fxFlex="500px" fxFlex.xs="100%" class="viewport">
+      <div class="close">
+          <button mat-icon-button mat-dialog-close>
+              <mat-icon>close</mat-icon>
+            </button></div>
     <mat-card-title>Create New Person</mat-card-title>
     <form [formGroup]="user" (ngSubmit)="onSubmit()">
       <mat-card-content>
@@ -266,7 +270,7 @@
 
       </mat-card-content>
       <mat-card-actions>
-        <button type="submit" [disabled]="user.invalid" class="btn btn-primary">Create user</button>
+        <button type="submit" [disabled]="user.invalid" class="btn btn-primary">Save</button>
       </mat-card-actions>
     </form>
     <div *ngIf="errors !== undefined" class="mt-2">
