--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -16,7 +16,10 @@
     <div class="col-sm col-12">
       <mat-form-field style="width: 100%;">
         <mat-icon matPrefix class="search">search</mat-icon>
-        <input matInput (keyup)="filterTableData($event.target.value)" placeholder="Search" />
+        <input matInput  [(ngModel)]="value"  (keyup)="filterTableData($event.target.value)" placeholder="Search" />
+        <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch($event.target.value);">
+          <mat-icon>close</mat-icon>
+          </button>
       </mat-form-field>
     </div>
     <!-- Create button -->
