--- a/src/app/kinships/list/listkinship.component.scss
+++ b/src/app/kinships/list/listkinship.component.scss
@@ -58,6 +58,9 @@ mat-cell {
   color: cornflowerblue;
 }
 
+.btn-sub {
+  text-align: center;
+}
 
 @media screen and (min-width: 300px) and (max-width: 770px) {
   .buttons {
