--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -1,34 +1,43 @@
-<section class="container p-2">
+<section class="container container-position">
   <div class="d-flex flex-row justify-content-center">
     <p class="mat-display-1 mb-4">Modify Kinship</p>
   </div>
-
-  <div id="divForm">
-    <div class="px-2 py-2">
-      <mat-form-field>
-        <mat-label>Person</mat-label>
-        <input matInput readonly value="{{ data.personName + ' ' + data.personLastName }}">
-      </mat-form-field>
-    </div>
-    <div class="px-2 py-2">
-      <mat-form-field>
-        <mat-label>Relative</mat-label>
-        <input matInput readonly value="{{ data.relativeName + ' ' + data.relativeLastName }}">
-      </mat-form-field>
-    </div>
-    <form [formGroup]="editkinship" (ngSubmit)="onSubmit()">
-      <div class="px-2 py-2" style="flex-direction: row;">
+  <button mat-icon-button mat-dialog-close class="close-icons"><i class="material-icons" >close</i></button>
+  <form [formGroup]="editkinship" (ngSubmit)="onSubmit()">
+  <div id="divForm" mat-dialog-content>
+      <div class="px-2 py-2">
+          <mat-card>
+              <i class="material-icons icons">face</i
+                ><mat-card-subtitle>Relative</mat-card-subtitle>
+            <mat-form-field>
+               <input matInput readonly value="{{ data.relativeName + ' ' + data.relativeLastName }}">
+            </mat-form-field>
+          </mat-card>
+        </div>
+      <div class="px-2 py-2">
+        <mat-card>
+          <mat-form-field>
+            <mat-label>Kinship</mat-label>
+            <mat-select placeholder="Kinship" [(value)]="relationSelected">
+              <mat-option *ngFor="let relation of relations" [value]="relation.id">{{ relation.name }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-card>
+      </div>
+  <div class="px-2 py-2">
+      <mat-card>
+          <i class="material-icons icons">face</i
+            ><mat-card-subtitle>Owner</mat-card-subtitle>
         <mat-form-field>
-          <mat-label>Kinship</mat-label>
-          <mat-select placeholder="Kinship" [(value)]="relationSelected">
-            <mat-option *ngFor="let relation of relations" [value]="relation.id">{{ relation.name }}</mat-option>
-          </mat-select>
+         <input matInput readonly value="{{ data.personName + ' ' + data.personLastName }}">
         </mat-form-field>
-      </div>
-      <br>
-      <div class="d-flex flex-row justify-content-center">
-        <button type="submit" class="btn btn-primary">Save</button>
-      </div>
-    </form>
-  </div>
+      </mat-card>
+    </div>
+ </div>
+ <div class="btn-sub">
+    <button type="submit" class="btn btn-primary mr-2">Save</button>
+    <button type="submit" class="btn btn-danger"
+      (click)="delete(data.personId, data.relativeId)">Delete</button>
+</div>
+</form>
 </section>
