--- a/src/app/kinships/list/listkinship.component.html
+++ b/src/app/kinships/list/listkinship.component.html
@@ -1,45 +1,83 @@
 <section id="post" class="container">
-
   <div class="d-flex flex-row justify-content-center">
     <p class="mat-display-1 mb-3">List Kinships</p>
   </div>
 
-  <div class="headerTable mb-10" [hidden]="isLoading">
-    <mat-form-field>
-      <mat-icon style="font-size: 18px; transform:translateY(3px);" matPrefix >search</mat-icon>
-      <mat-label>Search</mat-label>
-      <input name="searcher" class="search" matInput [(ngModel)]="value" (keyup)="onChange($event.target.value)" />
-      <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch($event.target.value);">
-      <mat-icon>close</mat-icon>
-      </button>
-    </mat-form-field>
+  <div class="row" *ngIf="isLoading">
+    <div class="col">
+      <div class="d-flex justify-content-center pb-3 pt-3">
+        <mat-spinner></mat-spinner>
+      </div>
+    </div>
+  </div>
+<div *ngIf="!isLoading">
+  <div class="row headerTable mb-10" >
+    <div class="col-sm col-12">
+      <mat-form-field>
+        <mat-icon style="font-size: 18px; transform:translateY(3px);" matPrefix
+          >search</mat-icon
+        >
+        <mat-label>Search</mat-label>
+        <input
+          name="searcher"
+          class="search"
+          matInput
+          [(ngModel)]="value"
+          (keyup)="onChange($event.target.value)"
+        />
+        <button
+          mat-button
+          *ngIf="value"
+          matSuffix
+          mat-icon-button
+          aria-label="Clear"
+          (click)="clearSearch($event.target.value)"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
 
-
-
-    <div class="options">
+    <div class="col-auto pb-sm-0 pb-3 options">
       <button mat-raised-button color="primary" (click)="openCreate()">
         Create Kinship
       </button>
     </div>
   </div>
 
-
-  <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
-
-  <mat-table [dataSource]="tableData" matSort matSortDisableClear class="mat-elevation-z8">
+  <mat-paginator
+    [pageSizeOptions]="[10, 15, 20, 25]"
+    showFirstLastButtons
+  ></mat-paginator>
+  <mat-table
+    [dataSource]="tableData"
+    matSort
+    matSortDisableClear
+    class="mat-elevation-z8"
+  >
     <ng-container matColumnDef="personName">
-      <mat-header-cell id="person" *matHeaderCellDef mat-sort-header class="titles">Person</mat-header-cell>
+      <mat-header-cell
+        id="person"
+        *matHeaderCellDef
+        mat-sort-header
+        class="titles"
+        >Person</mat-header-cell
+      >
       <mat-cell *matCellDef="let element">
         {{ element.personName }} {{ element.personLastName }}
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="kinshipType">
-      <mat-header-cell *matHeaderCellDef mat-sort-header disableClear class="titles">
+      <mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        disableClear
+        class="titles"
+      >
         Kinship Type
       </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.kinshipType }}
-      </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ element.kinshipType }} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="relativeName">
@@ -52,13 +90,26 @@
     </ng-container>
 
     <ng-container matColumnDef="buttons">
-      <mat-header-cell *matHeaderCellDef class="titles"> Action </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef class="titles">
+        Action
+      </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <mat-icon matTooltip="Edit Kinship" class="action-icon edit" (click)="openEdit(element)">edit</mat-icon>
-        <mat-icon matTooltip="Delete Kinship" class="action-icon delete" (click)="delete(element.personId, element.relativeId)">delete_forever</mat-icon>
+        <mat-icon
+          matTooltip="Edit Kinship"
+          class="action-icon edit"
+          (click)="openEdit(element)"
+          >edit</mat-icon
+        >
+        <mat-icon
+          matTooltip="Delete Kinship"
+          class="action-icon delete"
+          (click)="delete(element.personId, element.relativeId)"
+          >delete</mat-icon
+        >
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
+</div>
 </section>
