Implemented kinship creation while inside tree graph

--- a/src/app/people/tree/tree.component.html
+++ b/src/app/people/tree/tree.component.html
@@ -21,7 +21,7 @@
               <!-- Relative -->
               <mat-card-title *ngIf="node.relative">{{node.relative.name}} {{node.relative.lastName}}</mat-card-title>
               <mat-card-title *ngIf="!node.relative">
-                <button mat-icon-button>
+                <button mat-icon-button (click)="promptAdd(node.kinshipType)">
                   <mat-icon>add</mat-icon>
                 </button>
               </mat-card-title>
