Fix kinship pagination

--- a/src/app/people/inspect.kinships/inspect.component.html
+++ b/src/app/people/inspect.kinships/inspect.component.html
@@ -46,7 +46,7 @@
         <mat-header-cell class="KinshipTable icons" *matHeaderCellDef> Action </mat-header-cell>
         <mat-cell *matCellDef="let element">
           <mat-icon matTooltip="Edit Kinship" class="action-icon edit icons">edit</mat-icon>
-          <mat-icon matTooltip="Delete Kinship" class="action-icon delete icons">delete_forever</mat-icon>
+          <mat-icon matTooltip="Delete Kinship" class="action-icon delete icons">delete</mat-icon>
         </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
