Implemented person and kinship creation inside tree graph

--- a/src/app/kinships/create/create.component.html
+++ b/src/app/kinships/create/create.component.html
@@ -1,4 +1,4 @@
-<section class="container container-position">
+<section class="container kinships-create-component">
   <div fxLayout="row wrap" fxLayoutAlign="center center">
     <p class="mat-display-1 mb-4">Create Kinship</p>
    </div>
