--- a/src/app/people/create/create.component.html
+++ b/src/app/people/create/create.component.html
@@ -1,4 +1,4 @@
-<section fxLayout="row wrap" fxLayoutAlign="center center" class="hide-scroll">
+<section fxLayout="row wrap" fxLayoutAlign="center center" class="people-create-component">
   <mat-card fxFlex="500px" fxFlex.xs="100%" class="viewport">
       <div class="close">
           <button mat-icon-button mat-dialog-close>
