--- a/src/app/people/create/create.component.scss
+++ b/src/app/people/create/create.component.scss
@@ -1,26 +1,27 @@
-mat-form-field{
-  width: 400px;
-}
-mat-card-title{
-  text-align: center;
-  color: gray;
-}
-mat-card{
-  width:500px;
-  text-align: center;
-}
-mat-card-content{
-  align-content: center;
-}
-.hide-scroll {
+.people-create-component {
   overflow: hidden;
-}
-.viewport{
-  overflow: auto;
-}
-.close{
-  display: flex!important;
-  justify-content: flex-end!important;
-  text-align: right!important;
-  transform: translateY(-10px);
+
+  mat-form-field {
+    width: 400px;
+  }
+  mat-card-title {
+    text-align: center;
+    color: gray;
+  }
+  mat-card {
+    width: 500px;
+    text-align: center;
+  }
+  mat-card-content {
+    align-content: center;
+  }
+  .viewport {
+    overflow: auto;
+  }
+  .close {
+    display: flex !important;
+    justify-content: flex-end !important;
+    text-align: right !important;
+    transform: translateY(-10px);
+  }
 }
