--- a/src/app/people/tree/tree.component.html
+++ b/src/app/people/tree/tree.component.html
@@ -29,7 +29,12 @@
               <mat-card-subtitle *ngIf="node.kinshipType">{{node.kinshipType.name}}</mat-card-subtitle>
               <mat-card-subtitle *ngIf="!node.kinshipType">Owner</mat-card-subtitle>
             </mat-card-header>
-            <mat-card-content></mat-card-content>
+            <mat-card-content>
+              <!-- Delete button -->
+              <button mat-icon-button *ngIf="node.kinshipType && node.relative" (click)="promptDelete(node.relative, node.kinshipType)" class="node-delete-button">
+                <mat-icon>clear</mat-icon>
+              </button>
+            </mat-card-content>
           </mat-card>
         </div>
       </div>
