--- a/src/app/people/edit/edit.component.html
+++ b/src/app/people/edit/edit.component.html
@@ -15,8 +15,7 @@
               #input
               maxlength="40"
               matInput
-
-              pattern="[a-zA-Z\s]*"
+              pattern="[a-zA-Z^\' ]*"
               minlength="3"
               formControlName="name"
               [(ngModel)]="registro.name"
@@ -37,7 +36,7 @@
               matInput
               #input
               maxlength="80"
-              pattern="[a-zA-ZñÑ'áéíóúÁÉÍÓÚ\s]*"
+              pattern="[a-zA-Z^\'ñÑáéíóúÁÉÍÓÚ ]*"
               matInput
               placeholder="Last name"
               formControlName="lastName"
@@ -192,7 +191,7 @@
               <mat-label>Email</mat-label>
             <input
               matInput
-              type="text"
+              type="email"
               placeholder="Email"
               formControlName="email"
               [(ngModel)]="registro.contact1"
@@ -200,9 +199,9 @@
               ng-required="user.contactType1Id==2"
             />
             <mat-icon matSuffix>mail_outline</mat-icon>
-            <mat-error>
-              Please enter a valid email address
-            </mat-error>
+            <mat-error *ngIf="this.user.get('email').hasError">{{
+              getErrorMessage("email")
+            }}</mat-error>
           </mat-form-field>
           <mat-form-field *ngIf="showPhone" appearance="outline">
               <mat-label>Phone</mat-label>
@@ -242,7 +241,7 @@
               <mat-label>Email</mat-label>
             <input
               matInput
-              type="text"
+              type="email"
               placeholder="Email"
               formControlName="email2"
               [(ngModel)]="registro.contact2"
@@ -250,9 +249,9 @@
               ng-required="user.contactType2Id==2"
             />
             <mat-icon matSuffix>mail_outline</mat-icon>
-            <mat-error>
-              Please enter a valid email address
-            </mat-error>
+            <mat-error *ngIf="this.user.get('email2').hasError">{{
+              getErrorMessage("email2")
+            }}</mat-error>
           </mat-form-field>
           <mat-form-field *ngIf="showPhone2" appearance="outline">
               <mat-label>Phone</mat-label>
