Fix UI bugs and Modified works!

--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -38,7 +38,7 @@
  </div>
  <div class="btn-sub">
     <button type="submit" class="btn btn-primary mr-2">Save</button>
-    <button type="submit" class="btn btn-danger"
+    <button type="button" class="btn btn-danger"
       (click)="delete(data.personId, data.relativeId)">Delete</button>
 </div>
 </form>
