--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -16,14 +16,16 @@
         </div>
       <div class="px-2 py-2">
         <mat-card>
+          <mat-card-content>
+          <mat-card-subtitle>Kinship</mat-card-subtitle>
           <mat-form-field>
-            <mat-label>Kinship</mat-label>
-            <mat-select placeholder="Kinship" [(value)]="relationSelected">
-              <mat-option *ngFor="let relation of relations" [value]="relation.id">{{ relation.name }}</mat-option>
+            <mat-select  [(value)]="relationSelected">
+            <mat-option *ngFor="let relation of relations" [value]="relation.id">{{ relation.name }}</mat-option>
             </mat-select>
           </mat-form-field>
+        </mat-card-content>
         </mat-card>
-      </div>
+     </div>
   <div class="px-2 py-2">
       <mat-card>
           <i class="material-icons icons">face</i
@@ -36,7 +38,7 @@
  </div>
  <div class="btn-sub">
     <button type="submit" class="btn btn-primary mr-2">Save</button>
-    <button type="submit" class="btn btn-danger"
+    <button type="button" class="btn btn-danger"
       (click)="delete(data.personId, data.relativeId)">Delete</button>
 </div>
 </form>
